# pathfinder

./: CMakeLists.txt  README.md
config/: atomicRenderConfig.h  audio.h  config.h  help.h
header/: color.h  console.h  consoleParser.h  engine.h  event.h  font.h  global.h  input.h  misc.h  render.h  script.h
header/img/: bmp.h  img.h
scripts/header/: dijkstra.h  grid.h  pathfinder.h  tile.h
scripts/source/: dijkstra.cpp  grid.cpp  main.cpp
source/: console.cpp  consoleParser.cpp  engine.cpp  event.cpp  font.cpp  global.cpp  input.cpp  main.cpp  misc.cpp  render.cpp
source/img/: bmp.cpp  img.cpp
